FILE(GLOB SOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/custom-ossim-project-point-dll.cpp")

#SET(TARGET_TARGETNAME "${TARGET_DEFAULT_PREFIX}${APPLICATION_NAME}")
SET(TARGET_TARGETNAME "custom-ossim-project-point-dll")
ADD_LIBRARY(${TARGET_TARGETNAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES  OUTPUT_NAME "custom-ossim-project-point")
ADD_DEPENDENCIES(${TARGET_TARGETNAME} ${LIB_NAME})
TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME} ${LIB_NAME})
